add extra video

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </p>
       </div>
       <div class="img-focaccia">
-        <a href="https://www.youtube.com/watch?v=4VCa1dYz8uk&ab_channel=Gozney"><img src="assets/focaccia.png" alt="immagine della focaccia" /></a>
+        <video width="100%" controls poster="assets/focaccia.png">
+          <source src="assets/Onion Focaccia _ Mike Fitzick _ Gozney Dome.mp4" type="video/mp4" />
+        </video>
         <p>Image: Sally Vegas</p>
       </div>
       <div class="feature">
