cambiato le proprietà flexbox con margin e text align

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   </head>
   <body>
     <header>
-      <div>
-        <img id="logo" src="assets/logo.png" alt="immagine logo" />
-      </div>
+      <img id="logo" src="assets/logo.png" alt="immagine logo" />
+
       <div class="description-logo">
         <p>Part of <b>a simply fabulous thanksgiving</b></p>
       </div>
@@ -30,7 +29,7 @@
         </p>
       </div>
       <div class="img-focaccia">
-        <video width="100%" controls poster="assets/focaccia.png">
+        <video controls poster="assets/focaccia.png">
           <source src="assets/Onion Focaccia _ Mike Fitzick _ Gozney Dome.mp4" type="video/mp4" />
         </video>
         <p>Image: Sally Vegas</p>
